hphp/hack/test/ifc/check/vec.php.exp
=== IFC analysis results for vec.php
File "vec.php", line 16, characters 5-28:
Data with policy `I` appears in context `V`. (Typing[4379])
  File "vec.php", line 5, characters 14-19:
  This may be the data source with policy `I`
  File "vec.php", line 7, characters 19-28:
  This may be the data sink with policy `V`
File "vec.php", line 21, characters 5-28:
Data with policy `I` appears in context `V`. (Typing[4379])
  File "vec.php", line 5, characters 14-19:
  This may be the data source with policy `I`
  File "vec.php", line 7, characters 19-28:
  This may be the data sink with policy `V`
File "vec.php", line 28, characters 5-25:
Data with policy `V` appears in context `I`. (Typing[4379])
  File "vec.php", line 7, characters 19-28:
  This may be the data source with policy `V`
  File "vec.php", line 5, characters 14-19:
  This may be the data sink with policy `I`
  File "vec.php", line 26, characters 5-28:
  Another program point contributing to the illegal flow
File "vec.php", line 11, characters 5-26:
Data with policy `I` appears in context `V`. (Typing[4379])
  File "vec.php", line 5, characters 14-19:
  This may be the data source with policy `I`
  File "vec.php", line 7, characters 19-28:
  This may be the data sink with policy `V`
File "vec.php", line 48, characters 5-19:
Data with policy `X` appears in context `VX`. (Typing[4379])
  File "vec.php", line 36, characters 16-17:
  This may be the data source with policy `X`
  File "vec.php", line 40, characters 21-23:
  This may be the data sink with policy `VX`
  File "vec.php", line 47, characters 5-20:
  Another program point contributing to the illegal flow
